--- a/agents/update/update-document-detail.yaml
+++ b/agents/update/update-document-detail.yaml
@@ -23,7 +23,7 @@ input_schema:
     locale:
       type: string
       description: User language, e.g. zh, en
-    datasources:
+    detailDataSource:
       type: string
       description: Context for document content
     glossary:
@@ -57,5 +57,5 @@ afs:
 keep_text_in_tool_uses: false
 skills:
   - ./document-tools/update-document-content.mjs
-  - ./generate-diagram.yaml
+  # - ./generate-diagram.yaml
 task_render_mode: collapse
