--- a/agents/generate/merge-diagram.yaml
+++ b/agents/generate/merge-diagram.yaml
@@ -3,13 +3,13 @@ description: Merge Diagram source code into document
 instructions: |
   You are an AI assistant that helps to merge d2 diagram into document.
 
-  <detail_dataSource>
+  <detail_data_source>
   {{ content }}
-  </detail_dataSource>
+  </detail_data_source>
 
-  <diagramSourceCode>
+  <diagram_source_code>
   {{ diagramSourceCode }}
-  </diagramSourceCode>
+  </diagram_source_code>
 
   Given the source content of a document and the D2 diagram source code, your task is to:
   - **Keep the original content as soon as possible.**
