--- a/agents/evaluate/document.yaml
+++ b/agents/evaluate/document.yaml
@@ -2,7 +2,9 @@ name: evaluateDocument
 description: Evaluates the quality of generated document content, ensuring compliance with user-configured goals, audiences, and knowledge level requirements.
 instructions:
   url: ../../prompts/evaluate/document.md
-model: openai/gpt-5
+model:
+  model: openai/gpt-5
+  temperature: 1
 # model: anthropic/claude-opus-4-0
 task_render_mode: collapse
 task_title: Evaluate document for '{{ title }}'
