--- a/agents/schema/document-structure.yaml
+++ b/agents/schema/document-structure.yaml
@@ -10,11 +10,13 @@ items:
       type: string
       description: Path in URL format, cannot be empty, cannot contain spaces or special characters, must start with /, no need to include language level, e.g., /zh/about should return /about
     parentId:
-      type: string
+      type:
+        - string
+        - "null"
       description: Parent node path, if null indicates it is a top-level node
     sourceIds:
       type: array
-      description: Associated sourceId from dataSources for subsequent translation and content generation, must come from sourceId in datasources, cannot have fake ids, **cannot be empty**
+      description: Associated sourceId from `<data_sources>` for subsequent translation and content generation, must come from sourceId in `<data_sources>`, cannot have fake ids, **cannot be empty**
       items:
         type: string
   required:
