--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,7 +8,10 @@
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
       "include-component-in-tag": false,
-      "prerelease-type": "beta"
+      "prerelease-type": "beta",
+      "package-rules": [
+        { "type": "chore", "release-as": "patch" }
+      ]
     }
   }
 }
