--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,9 +9,7 @@
       "bump-patch-for-minor-pre-major": true,
       "include-component-in-tag": false,
       "prerelease-type": "beta",
-      "package-rules": [
-        { "type": "chore", "release-as": "patch" }
-      ]
+      "package-rules": [{ "type": "chore", "release-as": "patch" }]
     }
   }
 }
