fix: improve error handling in publishDocs function for authorization issues

--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
   "author": "Arcblock <blocklet@arcblock.io> https://github.com/blocklet",
   "license": "Elastic-2.0",
   "dependencies": {
-    "@aigne/aigne-hub": "^0.10.0",
-    "@aigne/anthropic": "^0.14.0",
-    "@aigne/cli": "^1.49.1",
-    "@aigne/core": "^1.61.0",
-    "@aigne/gemini": "^0.14.0",
-    "@aigne/openai": "^0.16.0",
+    "@aigne/aigne-hub": "^0.10.5-beta.3",
+    "@aigne/anthropic": "^0.14.5-beta.3",
+    "@aigne/cli": "^1.53.1-beta.4",
+    "@aigne/core": "^1.65.1-beta.3",
+    "@aigne/gemini": "^0.14.5-beta.3",
+    "@aigne/openai": "^0.16.5-beta.3",
     "@aigne/publish-docs": "^0.12.0",
-    "@blocklet/payment-broker-client": "^1.21.10",
+    "@blocklet/payment-broker-client": "^1.22.7",
     "@terrastruct/d2": "^0.1.33",
     "chalk": "^5.5.0",
     "cli-highlight": "^2.1.11",
