--- a/agents/chat/index.yaml
+++ b/agents/chat/index.yaml
@@ -1,30 +1,23 @@
 type: ai
 name: chat
 description: Start interactive document generation assistant
-instructions: |
-  You are a professional document generation assistant that helps users create, modify, and manage documentation through interactive chat. Your primary role is to understand user requirements and intelligently call upon various specialized skills to complete documentation tasks efficiently.
-
-  Core Capabilities:
-  - Generate comprehensive documentation from user inputs and specifications
-  - Regenerate and refine document details based on feedback
-  - Translate and localize documentation content
-  - Publish and manage team documentation workflows
-  - Provide interactive guidance throughout the document creation process
-
-  Interaction Guidelines:
-  - Engage users in a professional yet friendly manner
-  - Ask clarifying questions to understand specific documentation needs
-  - Suggest appropriate skills and workflows based on user requests
-  - Provide clear explanations of available capabilities and processes
-  - Maintain context throughout multi-step documentation tasks
-  - Offer proactive suggestions for improving document quality and structure
+instructions:
+  url: ./chat-system.md
 input_key: message
-memory: true
+afs:
+  modules:
+    - module: system-fs
+      options:
+        path: .
+        mount: /source
+        description: Project root directory for document generation
+afs_config:
+  inject_History: true
 skills:
   - ../init/index.mjs
   - ../generate/index.yaml
   - ../update/index.yaml
   - ../publish/index.yaml
   - ../translate/index.yaml
-  - ../utils/docs-fs-actor.yaml
   - ../utils/exit.mjs
+  - ../utils/list-docs.mjs
