--- a/aigne.yaml
+++ b/aigne.yaml
@@ -1,11 +1,14 @@
 #!/usr/bin/env aigne
 
 model:
+  # model: aignehub/gpt-5
+  # model: aignehub/claude-sonnet-4-0
   model: aignehub/gemini-2.5-pro # reasoning_effort 128-32768
   # https://github.com/AIGNE-io/aigne-framework/blob/main/models/gemini/src/gemini-chat-model.ts#L115
   reasoning_effort:
     $get: reasoningEffort
   temperature: 0.8
+diagramming_effort: 5
 agents:
   # Initialization
   - ./agents/init/index.mjs
@@ -101,6 +104,7 @@ agents:
   - ./agents/generate/merge-diagram.yaml
   - ./agents/update/generate-diagram.yaml
   - ./agents/update/check-generate-diagram.mjs
+  - ./agents/update/pre-check-generate-diagram.yaml
 cli:
   chat: ./agents/chat/index.yaml
   agents:
