feat: support user customize diagrammingEffort

--- a/agents/update/pre-check-generate-diagram.yaml
+++ b/agents/update/pre-check-generate-diagram.yaml
@@ -16,6 +16,9 @@ input_schema:
     detailFeedback:
       type: string
       description: Current document detail feedback
+    previousGenerationContent:
+      type: string
+      description: Previous document content
   required:
     - documentContent
 output_schema:
