feat: implement document title streamlining functionality (#276)
* feat: implement document title streamlining functionality

* refactor: remove commented-out title truncation logic from document structure

* refactor: streamline document title processing logic and update related documentation

---------

Co-authored-by: Pengfei <zhupengfei@arcblock.io>

--- a/aigne.yaml
+++ b/aigne.yaml
@@ -79,7 +79,9 @@ agents:
   - ./agents/utils/check-feedback-refiner.mjs
   - ./agents/utils/feedback-refiner.yaml
   - ./agents/utils/analyze-feedback-intent.yaml
-
+  - ./agents/utils/document-title-streamline.yaml
+  - ./agents/utils/streamline-document-titles-if-needed.mjs
+  
   # User Preferences & Chat
   - ./agents/prefs/index.mjs
   - ./agents/chat/index.yaml
