--- a/agents/chat/index.yaml
+++ b/agents/chat/index.yaml
@@ -14,9 +14,8 @@ afs:
 afs_config:
   inject_History: true
 skills:
-  - ../init/index.mjs
   - ../generate/index.yaml
-  - ../update/index.yaml
+  - ./skills/update-document.yaml
   - ../publish/index.yaml
   - ../translate/index.yaml
   - ../utils/exit.mjs
