--- a/aigne.yaml
+++ b/aigne.yaml
@@ -3,7 +3,7 @@
 model:
   # model: aignehub/gpt-5
   # model: aignehub/claude-sonnet-4-0
-  model: aignehub/gemini-2.5-pro # reasoning_effort 128-32768
+  model: google/gemini-2.5-pro # reasoning_effort 128-32768
   # https://github.com/AIGNE-io/aigne-framework/blob/main/models/gemini/src/gemini-chat-model.ts#L115
   reasoning_effort:
     $get: reasoningEffort
