--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "debug": "^4.4.1",
     "diff": "^8.0.2",
     "dompurify": "^3.2.6",
+    "fast-deep-equal": "^3.1.3",
     "file-type": "^21.0.0",
     "fs-extra": "^11.3.1",
     "glob": "^11.0.3",
