feat: enable AFS for chat agent & improve chat skills (#281)

--- a/aigne.yaml
+++ b/aigne.yaml
@@ -79,9 +79,11 @@ agents:
   - ./agents/utils/check-feedback-refiner.mjs
   - ./agents/utils/feedback-refiner.yaml
   - ./agents/utils/analyze-feedback-intent.yaml
+  - ./agents/utils/list-docs.mjs
+
   - ./agents/utils/document-title-streamline.yaml
   - ./agents/utils/streamline-document-titles-if-needed.mjs
-  
+
   # User Preferences & Chat
   - ./agents/prefs/index.mjs
   - ./agents/chat/index.yaml
