--- a/aigne.yaml
+++ b/aigne.yaml
@@ -83,6 +83,8 @@ agents:
 
   - ./agents/utils/document-title-streamline.yaml
   - ./agents/utils/streamline-document-titles-if-needed.mjs
+  - ./agents/utils/document-icon-generate.yaml
+  - ./agents/utils/generate-document-icon-if-needed.mjs
 
   # User Preferences & Chat
   - ./agents/prefs/index.mjs
