chore: update configuration and history files with new icons and lastGitHead

--- a/.aigne/doc-smith/history.yaml
+++ b/.aigne/doc-smith/history.yaml
@@ -1,4 +1,7 @@
 entries:
+  - timestamp: 2025-11-11T03:51:14.203Z
+    operation: structure_update
+    feedback: update icon
   - timestamp: 2025-10-17T06:14:42.833Z
     operation: document_update
     feedback: Interactive mode can also update multiple articles.
