--- a/agents/chat/index.yaml
+++ b/agents/chat/index.yaml
@@ -13,12 +13,17 @@ afs:
         path: .
         mount: /source
         description: Project root directory for document generation
+    - module: system-fs
+      options:
+        path: .aigne/doc-smith/docs
+        mount: /docs
+        description: Generated documentation files directory
 afs_config:
-  inject_History: true
+  inject_history: true
 skills:
+  - ./skills/list-documents.mjs
   - ./skills/generate-document.yaml
   - ./skills/update-document.yaml
   - ../publish/index.yaml
   - ../translate/index.yaml
   - ../utils/exit.mjs
-  - ../utils/list-docs.mjs
