fix: agent loading path

--- a/agents/chat/skills/generate-document.yaml
+++ b/agents/chat/skills/generate-document.yaml
@@ -10,6 +10,6 @@ input_schema:
   required:
     - feedback
 skills:
-  - url: ../../generate/index.yaml
+  - url: ../../create/index.yaml
     default_input:
       isChat: true
