feat: add load-sources utility and enhance document publishing with icon mapping
(cherry picked from commit f02e16ebf310c53049f9c4179797cc897e12f4fc)

--- a/agents/publish/index.yaml
+++ b/agents/publish/index.yaml
@@ -10,6 +10,7 @@ skills:
       skipIfExists: true
       checkOnly: true
   - url: ../init/check.mjs
+  - url: ../utils/load-sources.mjs
   - translate-meta.mjs
   - publish-docs.mjs
 input_schema:
