--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
   "author": "Arcblock <blocklet@arcblock.io> https://github.com/blocklet",
   "license": "Elastic-2.0",
   "dependencies": {
-    "@aigne/cli": "^1.53.1-beta.4",
-    "@aigne/core": "^1.65.1-beta.3",
-    "@aigne/publish-docs": "^0.12.1",
-    "@blocklet/payment-broker-client": "^1.22.8",
+    "@aigne/cli": "^1.54.1",
+    "@aigne/core": "^1.67.0",
+    "@aigne/publish-docs": "^0.13.0",
+    "@blocklet/payment-broker-client": "^1.22.10",
     "@terrastruct/d2": "^0.1.33",
     "chalk": "^5.5.0",
     "debug": "^4.4.1",
