--- a/agents/create/index.yaml
+++ b/agents/create/index.yaml
@@ -24,6 +24,7 @@ skills:
         $get: outputDir
       fileName: structure-plan.json
   - ../utils/save-sidebar.mjs
+  - ../utils/ensure-document-icons.mjs
   - type: transform
     name: transformData
     task_render_mode: hide
