refactor: remove generate-document-icon-if-needed utility and update related document handling in add and update functions

--- a/agents/update/index.yaml
+++ b/agents/update/index.yaml
@@ -31,6 +31,7 @@ skills:
     default_input:
       requiredFeedback: false
   - ../utils/format-document-structure.mjs
+  - ../utils/ensure-document-icons.mjs
   - ../media/load-media-description.mjs
   - ../update/check-update-is-single.mjs
   - ../update/save-and-translate-document.mjs
