--- a/agents/create/user-remove-document/index.yaml
+++ b/agents/create/user-remove-document/index.yaml
@@ -15,12 +15,28 @@ skills:
       fileName: structure-plan.json
   - ../../utils/save-sidebar.mjs
   - ./find-documents-with-invalid-links.mjs
-  - ./review-documents-with-invalid-links.mjs
   - ../../utils/add-translates-to-structure.mjs
+  - ./review-documents-with-invalid-links.mjs
   - ../../utils/format-document-structure.mjs
   - ../../media/load-media-description.mjs
-  - ../../update/batch-generate-document.yaml
+  - type: team
+    name: batchRemoveInvalidLinks
+    description: Batch remove invalid links from documents
+    skills:
+      - ./init-current-content.mjs
+      - ../utils/transform-detail-data-sources.mjs
+      - ../update/update-single/update-single-document-detail.mjs
+    iterate_on: documentsWithInvalidLinks
+    concurrency: 5
+  - type: team
+    name: batchTranslateDocuments
+    description: Batch translate documents to multiple languages
+    skills:
+      - ../localize/translate-multilingual.yaml
+    iterate_on: documentsWithInvalidLinks
+    concurrency: 5
   - ../../utils/post-generate.mjs
+  - ./print-remove-document-summary.mjs
 input_schema:
   type: object
   properties:
