--- a/agents/update/update-document-detail.yaml
+++ b/agents/update/update-document-detail.yaml
@@ -48,9 +48,13 @@ skills:
         needDataSources:
           type: boolean
           description: Whether data sources are needed for content modifications
+        path:
+          type: string
+          description: Document path
       required:
         - originalContent
         - feedback
+        - path
     output_key: message
     afs:
       modules:
