--- a/agents/create/user-add-document/index.yaml
+++ b/agents/create/user-add-document/index.yaml
@@ -14,12 +14,22 @@ skills:
         $get: outputDir
       fileName: structure-plan.json
   - ../../utils/save-sidebar.mjs
-  # 批量 generate
-  - ./find-documents-to-add-links.mjs
+  # structure 准备工作
+  - ../../utils/ensure-document-icons.mjs
   - ../../utils/add-translates-to-structure.mjs
-  - ./review-documents-with-new-links.mjs
   - ../../utils/format-document-structure.mjs
   - ../../media/load-media-description.mjs
+  - ../../update/batch-generate-document.yaml
+  # 批量 generate
+  - type: team
+    skills:
+      - ../../update/check-document.mjs
+    iterate_on: newDocuments
+    concurrency: 5
+  # 查找需要添加链接的文档
+  - ./find-documents-to-add-links.yaml
+  # review
+  - ./review-documents-with-new-links.mjs
   - type: team
     name: batchAddNewLinks
     description: Batch add new links to documents
