fix: remove document error

--- a/agents/create/user-remove-document/index.yaml
+++ b/agents/create/user-remove-document/index.yaml
@@ -26,14 +26,15 @@ skills:
       - ../utils/init-current-content.mjs
       - ../../utils/transform-detail-data-sources.mjs
       - ../../update/update-single/update-single-document-detail.mjs
-    iterate_on: documentsWithInvalidLinks
+    iterate_on: documentsToUpdate
     concurrency: 5
+  - ./prepare-documents-to-translate.mjs
   - type: team
     name: batchTranslateDocuments
     description: Batch translate documents to multiple languages
     skills:
       - ../../localize/translate-multilingual.yaml
-    iterate_on: documentsWithInvalidLinks
+    iterate_on: documentsToTranslate
     concurrency: 5
   - ../../utils/post-generate.mjs
   - ./print-remove-document-summary.mjs
