feat: support for add document and remove document (#323)

--- a/agents/update/update-document-detail.yaml
+++ b/agents/update/update-document-detail.yaml
@@ -3,7 +3,7 @@ name: updateDocumentDetail
 description: Update and optimize document content based on user feedback using diff patches
 task_render_mode: collapse
 skills:
-  - url: ../utils/analyze-feedback-intent.yaml
+  - url: ../utils/analyze-document-feedback-intent.yaml
   - type: ai
     instructions:
       - role: system
@@ -48,9 +48,13 @@ skills:
         needDataSources:
           type: boolean
           description: Whether data sources are needed for content modifications
+        path:
+          type: string
+          description: Document path
       required:
         - originalContent
         - feedback
+        - path
     output_key: message
     afs:
       modules:
