--- a/agents/utils/analyze-document-feedback-intent.yaml
+++ b/agents/utils/analyze-document-feedback-intent.yaml
@@ -1,8 +1,8 @@
-name: analyzeFeedbackIntent
+name: analyzeDocumentFeedbackIntent
 description: Analyze user feedback to determine if data sources are needed for content modifications
 task_render_mode: hide
 instructions:
-  url: ../../prompts/utils/analyze-feedback-intent.md
+  url: ../../prompts/utils/analyze-document-feedback-intent.md
 input_schema:
   type: object
   properties:
@@ -23,6 +23,9 @@ output_schema:
     reason:
       type: string
       description: Explanation of why data sources are or aren't needed
+    error: 
+      type: boolean
+      description: If an error occurs during the analysis process
   required:
     - needDataSources
     - intentType
