chore: update doc

--- a/.aigne/doc-smith/history.yaml
+++ b/.aigne/doc-smith/history.yaml
@@ -1,4 +1,26 @@
 entries:
+  - timestamp: 2025-11-21T09:03:29.492Z
+    operation: structure_update
+    feedback: Change the parent document of 'Manage Update History', 'Add a Document', 'Remove a
+      Document' to 'Update Document'
+  - timestamp: 2025-11-21T09:00:53.187Z
+    operation: structure_update
+    feedback: Add a new document 'Update Document' It provides an overview of all update operations.
+  - timestamp: 2025-11-21T08:59:48.210Z
+    operation: structure_update
+    feedback: Rename the 'Update Document' to 'Update Content'
+  - timestamp: 2025-11-21T08:56:43.343Z
+    operation: structure_update
+    feedback: Move 'Update Document' after 'Create Document'
+  - timestamp: 2025-11-21T08:54:33.039Z
+    operation: structure_update
+    feedback: Rename 'Update Documents' to 'Update Document'
+  - timestamp: 2025-11-21T08:49:12.660Z
+    operation: structure_update
+    feedback: Add a new document 'Update Document' It provides an overview of all update operations.
+  - timestamp: 2025-11-21T08:45:27.348Z
+    operation: structure_update
+    feedback: Rename the 'Update Document' to 'Update Content'
   - timestamp: 2025-11-11T03:51:14.203Z
     operation: structure_update
     feedback: update icon
