chore: update doc

--- a/.aigne/doc-smith/history.yaml
+++ b/.aigne/doc-smith/history.yaml
@@ -1,4 +1,31 @@
 entries:
+  - timestamp: 2025-11-21T09:51:21.728Z
+    operation: document_update
+    feedback: merge '1. Initial Prompt' and '2. Adding Documents'. merge '3. Automatic Link Analysis'
+      and '4. Review and Confirm Updates'.
+    docPaths:
+      - /guides/adding-a-document
+  - timestamp: 2025-11-21T09:45:03.092Z
+    operation: document_update
+    feedback: modify the title to 'Update Content'
+    docPaths:
+      - /guides/updating-document
+  - timestamp: 2025-11-21T09:35:00.932Z
+    operation: structure_update
+    feedback: Move the 'Manage Update History' after the 'Remove a Document'
+  - timestamp: 2025-11-21T09:33:54.977Z
+    operation: structure_update
+    feedback: Move the 'Manage Update History' to the last child of 'Update Document'
+  - timestamp: 2025-11-21T09:32:56.414Z
+    operation: structure_update
+    feedback: Move the 'Manage Update History' under 'Update Document'
+  - timestamp: 2025-11-21T09:29:59.765Z
+    operation: structure_update
+    feedback: move the 'Manage Update History' to the end
+  - timestamp: 2025-11-21T09:20:26.878Z
+    operation: structure_update
+    feedback: Switch the path of 'Update Document' and 'Update Content'. Make sure 'Update Document' is
+      the parent of 'Update Content'
   - timestamp: 2025-11-21T09:03:29.492Z
     operation: structure_update
     feedback: Change the parent document of 'Manage Update History', 'Add a Document', 'Remove a
