chore: add docs for add/remove document (#331)
Co-authored-by: lixl <lixianling@arcblock.io>

--- a/.aigne/doc-smith/history.yaml
+++ b/.aigne/doc-smith/history.yaml
@@ -1,4 +1,87 @@
 entries:
+  - timestamp: 2025-11-21T10:22:23.464Z
+    operation: document_update
+    feedback: add 'Related Guides' at the end to reference to the 'Remove a Document' and the 'Update
+      Content'
+    docPaths:
+      - /guides/adding-a-document
+  - timestamp: 2025-11-21T10:16:44.317Z
+    operation: document_update
+    feedback: merge '1. Select Documents' and '2. Confirm Selection'. Merge the '1. Select Documents
+      (H3)' and the '2. Confirm Selection (H3)'
+    docPaths:
+      - /guides/removing-a-document
+  - timestamp: 2025-11-21T10:13:08.808Z
+    operation: document_update
+    feedback: Rename 'How to Remove Documents' to 'Command Usage'. Move 'Step-by-Step Process' to H2 and
+      rename to 'The Process'. Make every step under 'The Process' to H3 and provider code block
+      use-cases
+    docPaths:
+      - /guides/removing-a-document
+  - timestamp: 2025-11-21T10:08:09.517Z
+    operation: document_update
+    feedback: use x-card to link to 'Update Content' and 'Remove Document'
+    docPaths:
+      - /guides/adding-a-document
+  - timestamp: 2025-11-21T10:01:13.990Z
+    operation: document_update
+    feedback: Adding alias use-case in 'Command Usage'
+    docPaths:
+      - /guides/adding-a-document
+  - timestamp: 2025-11-21T09:57:33.498Z
+    operation: document_update
+    feedback: Rewrite ‘2. Review and Link to Existing Documents’ using code blocks as use case examples.
+    docPaths:
+      - /guides/adding-a-document
+  - timestamp: 2025-11-21T09:51:21.728Z
+    operation: document_update
+    feedback: merge '1. Initial Prompt' and '2. Adding Documents'. merge '3. Automatic Link Analysis'
+      and '4. Review and Confirm Updates'.
+    docPaths:
+      - /guides/adding-a-document
+  - timestamp: 2025-11-21T09:45:03.092Z
+    operation: document_update
+    feedback: modify the title to 'Update Content'
+    docPaths:
+      - /guides/updating-document
+  - timestamp: 2025-11-21T09:35:00.932Z
+    operation: structure_update
+    feedback: Move the 'Manage Update History' after the 'Remove a Document'
+  - timestamp: 2025-11-21T09:33:54.977Z
+    operation: structure_update
+    feedback: Move the 'Manage Update History' to the last child of 'Update Document'
+  - timestamp: 2025-11-21T09:32:56.414Z
+    operation: structure_update
+    feedback: Move the 'Manage Update History' under 'Update Document'
+  - timestamp: 2025-11-21T09:29:59.765Z
+    operation: structure_update
+    feedback: move the 'Manage Update History' to the end
+  - timestamp: 2025-11-21T09:20:26.878Z
+    operation: structure_update
+    feedback: Switch the path of 'Update Document' and 'Update Content'. Make sure 'Update Document' is
+      the parent of 'Update Content'
+  - timestamp: 2025-11-21T09:03:29.492Z
+    operation: structure_update
+    feedback: Change the parent document of 'Manage Update History', 'Add a Document', 'Remove a
+      Document' to 'Update Document'
+  - timestamp: 2025-11-21T09:00:53.187Z
+    operation: structure_update
+    feedback: Add a new document 'Update Document' It provides an overview of all update operations.
+  - timestamp: 2025-11-21T08:59:48.210Z
+    operation: structure_update
+    feedback: Rename the 'Update Document' to 'Update Content'
+  - timestamp: 2025-11-21T08:56:43.343Z
+    operation: structure_update
+    feedback: Move 'Update Document' after 'Create Document'
+  - timestamp: 2025-11-21T08:54:33.039Z
+    operation: structure_update
+    feedback: Rename 'Update Documents' to 'Update Document'
+  - timestamp: 2025-11-21T08:49:12.660Z
+    operation: structure_update
+    feedback: Add a new document 'Update Document' It provides an overview of all update operations.
+  - timestamp: 2025-11-21T08:45:27.348Z
+    operation: structure_update
+    feedback: Rename the 'Update Document' to 'Update Content'
   - timestamp: 2025-11-11T03:51:14.203Z
     operation: structure_update
     feedback: update icon
