--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "bun test",
-    "test:coverage2": "bun test --coverage",
-    "test:coverage": "bun test --coverage --coverage-reporter=lcov --coverage-reporter=text",
-    "test:watch": "bun test --watch",
+    "test": "bun test --preload ./tests/setup/mock-process-exit.mjs",
+    "test:coverage2": "bun test --preload ./tests/setup/mock-process-exit.mjs --coverage",
+    "test:coverage": "bun test --preload ./tests/setup/mock-process-exit.mjs --coverage --coverage-reporter=lcov --coverage-reporter=text",
+    "test:deploy": "bun test --preload ./tests/setup/mock-process-exit.mjs tests/utils/deploy.test.mjs --coverage --coverage-reporter=text",
+    "test:user-review": "bun test --preload ./tests/setup/mock-process-exit.mjs tests/agents/update/user-review-document.test.mjs --coverage --coverage-reporter=lcov --coverage-reporter=text",
+    "test:watch": "bun test --preload ./tests/setup/mock-process-exit.mjs --watch",
     "lint": "biome lint && biome format",
     "update:deps": "npx -y taze major -r -w -f -n '/@abtnode|@aigne|@arcblock|@blocklet|@did-connect|@did-pay|@did-space|@nft-store|@nft-studio|@ocap/' && pnpm install && pnpm run deduplicate",
     "deduplicate": "pnpm dedupe",
